components/apps/archive/tekton-pipeline/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    cert-manager.io/cluster-issuer: letsencrypt-issuer
spec: 
  rules:
    - host: webhook.${CLUSTER_DOMAIN}
      http:
        paths:
          - path: /hooks
            pathType: Exact
            backend:
              service:
                name: el-trigger-demo-el
                port:
                  number: 8080
  tls:
  - hosts:
    - webhook.${CLUSTER_DOMAIN}
    secretName: webhook-certificate-tls
